@@ -2,93 +2,90 @@ package com.expense.tracker;
 
 import com.expense.tracker.models.Expense;
 
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
-import java.util.*;
+import java.util.OptionalDouble;
+import java.util.Scanner;
 
 
 public class Main {
     public static final Scanner scanner = new Scanner(System.in);
     private static final String CSV_FILE = "Expenses.csv";
-    private static List<Expense> expenses = new ArrayList<>();
 
     public static void main(String[] args) {
         printMenu();
+
         while (true) {
-            try {
-                int cmd = scanner.nextInt();
-                switch (cmd) {
-                    case 1:
-                        if (!doesCsvFileExists()) {
-                            createFile();
-                        }
-                        addExpenses();
-                        break;
-                    case 2:
-                        if (!doesCsvFileExists()) {
-                            createFile();
-                            System.out.println("you don't have any expenses");
-                        } else {
-                            ListExpenses();
-                        }
-                        break;
-                    case 3:
-                        if (!doesCsvFileExists()) {
-                            createFile();
-                            System.out.println("You don't have any spending.");
-                        } else {
-                            System.out.println("Total spent: " + totalSpent());
-                        }
-                        break;
-                    case 4:
-                        return;
-                }
-            } catch (InputMismatchException e) {
-                System.out.println("Invalid input! Please enter a number from 1-4.");
-            } catch (NumberFormatException e) {
-                System.out.println("Amount must be a valid number");
-            } catch (FileNotFoundException e) {
-                System.out.println("File not found:" + e.getMessage());
-            } catch (NullPointerException e) {
-                System.out.println("Null object error");
-            } catch (IllegalFormatException e) {
-                System.out.println("Invalid number!Please enter the postive number");
-            } catch (Exception e) {
-                System.out.println("Unexpected error: " + e.getMessage());
+            int cmd = nextIntCommand();
+            switch (cmd) {
+                case 0:
+                    System.out.println("Waiting for your command...");
+                    break;
+                case 1:
+                    if (missingCsvFile()) {
+                        createFile();
+                    }
+                    addExpenses();
+                    break;
+                case 2:
+                    if (missingCsvFile()) {
+                        createFile();
+                        System.out.println("you don't have any expenses");
+                    } else {
+                        listExpenses();
+                    }
+                    break;
+                case 3:
+                    if (missingCsvFile()) {
+                        createFile();
+                        System.out.println("You don't have any spending.");
+                    } else {
+                        System.out.println("Total spent: " + totalSpent());
+                    }
+                    break;
+                case 4:
+                    return;
             }
         }
     }
 
     private static void printMenu() {
         System.out.println("\n=== Welcome to Expense Tracker ===\n");
-        System.out.print("Available commands are:");
+        System.out.print("Available commands are:\n");
         System.out.println("1. Add expense");
         System.out.println("2. List Expenses");
         System.out.println("3. View Total Spent");
         System.out.println("4. Exit");
-        System.out.println("Choose one to proceed:");
+        System.out.println("Choose one to proceed:\n");
     }
 
-    public static void addExpenses() {
+    private static void addExpenses() {
         System.out.println("Enter expense description:");
         String description = scanner.next();
         System.out.println("Enter expense amount:");
-        double amount = Double.parseDouble(scanner.next());
-        Expense e1 = new Expense(description, amount);
+
+        OptionalDouble amount = nextDoubleCommand();
+        if (amount.isEmpty()) {
+            System.out.println("Invalid amount. Please enter a valid decimal number.");
+            System.out.println("For example: 12.34 or 100");
+            return;
+        }
+
+        Expense expense = new Expense(description, amount.getAsDouble());
+
         try {
-            var newRow = e1 + System.lineSeparator();
+            var newRow = expense + System.lineSeparator();
             Files.write(Path.of(CSV_FILE), newRow.getBytes(), StandardOpenOption.APPEND);
         } catch (IOException e) {
-            e.printStackTrace();
+            throw new RuntimeException("Error writing to file: " + e.getMessage(), e);
         }
-        System.out.println("Expense added successfully: " + e1);
+        System.out.println("Expense added successfully: " + expense);
     }
 
-    public static void ListExpenses() throws IOException {
+    private static void listExpenses() {
         System.out.println("Expenses:");
 
         String fileContent = readFile();
@@ -101,25 +98,53 @@ public class Main {
         }
     }
 
-    public static double totalSpent() {
-
+    private static double totalSpent() {
         double total = 0;
-        for (Expense expense : expenses) {
-            total = total + expense.getAmount();
+        // TODO:
+        // 1) read csv file content
+        // 2) split by lines - System.lineSeparator() = String[]
+        // 3) skip the first line (header)
+        // 4) for each line, split by ';' and get the amount
+        // 5) sum all amounts and return the total
+
+        return total;
+    }
+
+    private static void createFile() {
+        try {
+            Files.writeString(Paths.get(CSV_FILE), "description;amount;date;" + System.lineSeparator());
+        } catch (IOException e) {
+            throw new RuntimeException("Unexpected error occurred while creating csv file", e);
         }
-        return 0;
     }
 
-    public static void createFile() throws IOException {
-        Files.writeString(Paths.get(CSV_FILE), "description;amount;date;" + System.lineSeparator());
+    private static boolean missingCsvFile() {
+        return !Files.exists(Paths.get(CSV_FILE));
     }
 
-    public static boolean doesCsvFileExists() {
-        return Files.exists(Paths.get(CSV_FILE));
+    private static String readFile() {
+        try {
+            return Files.readString(Path.of(CSV_FILE));
+        } catch (IOException e) {
+            throw new RuntimeException("Unexpected error occurred while reading csf file", e);
+        }
     }
 
-    public static String readFile() throws IOException {
-        return Files.readString(Path.of(CSV_FILE));
+    private static int nextIntCommand() {
+        try {
+            return Integer.parseInt(scanner.next());
+        } catch (NumberFormatException e) {
+            System.out.println("Please enter a valid number from 1 to 4");
+            return 0; // Default to exit if input is invalid
+        }
+    }
+
+    private static OptionalDouble nextDoubleCommand() {
+        try {
+            return OptionalDouble.of(Double.parseDouble(scanner.next()));
+        } catch (NumberFormatException e) {
+            return OptionalDouble.empty();
+        }
     }
 }
 
